# GDACS_Flood_DB

./: .gitignore  logging_config.json  main.py  pyproject.toml
data/: .~lock.gdacs_flood_db.csv#  .~lock.gdacs_flood_db_corrected.csv#  gdacs_flood_db.csv  gdacs_flood_db_corrected.csv  latest_gdacs_flood_db.csv  needs_review.csv  review_work.csv  validation_overrides.csv
data/gdacs_daily_download/: gdacs_flood_db_20260204.csv
gdacs_flood_db/: config.py  fetch.py  logger.py  pipeline.py  schema.py
gdacs_flood_db/tests/: test_pipeline.py
gdacs_flood_db/utils/: country_resolution.py  detect_db_change.py  download_aois.py  download_db_utils.py  equi7_grid_code.py  geo_data.py  geo_lookup.py  geo_validation.py  update_db.py
logs/: debug.log.jsonl  info.log.jsonl  logger.log.jsonl
scripts/: download_all_flood.py  download_flood_db.py  run_daily_update.sh  update_flood_db.py  validate_flood_events.py
