[project]
name = "gdacs-flood-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "geopandas>=1.1.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "pycountry-convert>=0.7.2",
    "pyogrio>=0.12.1",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
